2008-10-17  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: Detect input devices
	with the input.keys capabilities as well, Ignore "Video Bus"
	devices, fixes detection of the PS3 BD remote control, and other
	input device remote controls (Closes: #555802)

2008-10-17  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: Fix Logitech check,
	it would have been ignoring any Logitech devices

2008-10-17  Bastien Nocera  <hadess@hadess.net>

	* data/receivers.conf: Add more receivers (Closes: #556643)

2008-10-17  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: The Logitech Mini-Receivers, when
	in HID mode, only show a portion of the keys on this interface (with a
	separate keyboard and mouse still visible).  We shouldn't try to
	configure that device (Closes: #541104)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* data/gnome-lirc-properties.glade: Fix GTK+ warning on
	startup (Closes: #556552)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* data/receivers.conf:
	* gnome_lirc_properties/hardware.py: Add support for the Apple
	Mac Mini IR Receivers (Closes: #556599)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* configure.ac:
	* data/Makefile.am:
	* data/linux-input-layer-lircd.conf:
	* data/lirc-generate-linux-input.c (load_include), (set_warnings),
	(main): Add program to generate an updated
	linux-input-layer-lircd.conf from the installed linux headers,
	so that we avoid bitrot and missing keycodes (Helps: #555802)

2008-07-25  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Added Swedish translation.
	* help/Makefile.am: Added sv to DOC_LINGUAS.

0.2.8:

2008-07-01  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py:
	* gnome_lirc_properties/lirc.py: Fix the regexps looking
	for include statements in /etc/lircd.conf - the include syntax
	changed.

2008-07-01  Bastien Nocera  <hadess@hadess.net>
